Added rules and db plugins.
